[project]
name = "SmartQ"
version = "0.1.0"
description = "Smart quiz bot platform"
authors = [
    {name = "Shumpei Morimoto"}
]
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.116.1",
    "openai>=1.99.6",
    "typer",
    "uvicorn>=0.35.0",
]

[project.optional-dependencies]
dev = [
    "ruff==0.12.2",
    "ty==0.0.1a13"
]

[tool.ruff]
line-length = 100
